Bug 1556242 - Discard '-message' part of URL scheme in nsMsgAccountManager::FindServerByURI(). r=aceman DONTBUILD

--HG--
extra : amend_source : b578c2683f7a88dfbdfd023196fc2224f9b1e7a4