mailnews/base/src/nsMsgAccountManager.cpp
@@ -1728,6 +1728,10 @@ nsMsgAccountManager::FindServerByURI(nsIURI *aURI, bool aRealFlag,
   nsAutoCString type;
   rv = aURI->GetScheme(type);
   if (NS_SUCCEEDED(rv) && !type.IsEmpty()) {
+    // Remove "-message" from the scheme in case we get called with
+    // "imap-message", "mailbox-message", or friends.
+    if (StringEndsWith(type, nsDependentCString("-message")))
+      type.SetLength(type.Length() - 8);
     // now modify type if pop or news
     if (type.EqualsLiteral("pop")) type.AssignLiteral("pop3");
     // we use "nntp" in the server list so translate it here.
